Fix overflow problem on page when mobile menu is open

--- a/packages/create-mufferplate/templates/template-single-bs/src/css/base/_base.scss
+++ b/packages/create-mufferplate/templates/template-single-bs/src/css/base/_base.scss
@@ -2,6 +2,14 @@ body {
   position: relative;
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
+  &.show{
+    overflow: hidden;
+  }
+}
+html{
+  &.show{
+    overflow: hidden;
+  }
 }
 a {
   text-decoration: none;
