--- a/packages/create-mufferplate/templates/template-single-custom/src/css/base/_base.scss
+++ b/packages/create-mufferplate/templates/template-single-custom/src/css/base/_base.scss
@@ -1,5 +1,13 @@
 body {
   overflow-x: hidden;
+  &.show{
+    overflow: hidden;
+  }
+}
+html{
+  &.show{
+    overflow: hidden;
+  }
 }
 a {
   text-decoration: none;
